--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,31 @@
+# --- Web Framework ---
 fastapi==0.115.0
 uvicorn[standard]==0.30.6
+
+# --- Data Validation / Settings ---
 pydantic==2.8.2
 pydantic-settings==2.4.0
+
+# --- Database ---
 sqlalchemy==2.0.32
 alembic==1.13.2
+aiosqlite==0.20.0
+
+# --- HTTP Client ---
 httpx==0.27.0
+
+# --- Data Science / ML ---
 pandas==2.2.2
 numpy==1.26.4
 scikit-learn==1.5.1
 xgboost==2.1.1
+statsmodels==0.14.2
+
+# --- Deep Learning / Forecasting ---
+torch>=2.2
+pytorch-lightning>=2.3.0
+neuralforecast>=1.7.4
+
+# --- Utils ---
 python-dotenv==1.0.1
 loguru==0.7.2
-aiosqlite==0.20.0
-statsmodels==0.14.2
-statsmodels==0.14.2
-neuralforecast>=1.7.4
-pytorch-lightning>=2.3.0
-torch>=2.2
